SVG instead of PNG phone

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="committees">
-		<h2>Committees</h1>
+		<h1>Committees</h1>
 
 		<div class="clist">
 			
@@ -64,7 +64,7 @@
 	<div class="app">
 		<div class="phone-holder">
 			<img src="buttons-strip.svg" class="buttons-strip">
-			<img src="phone.png" class="phone">
+			<img src="phone.svg" class="phone">
 		</div>
 		<h1>Yes, an app for "MUNIC"</h1>
 		<p>Like someone’s Global Village Ramp Walk? Let them know. Want a more realistic simulation of global policy making and diplomacy. Receive crisis updates at 3 in the morning.</p>
