Changed WOL design

--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 
 	<div class="waiver">
 		<div class="waiver-holder">
-			<a href="./Waiver_Of_Liability.pdf">WAIVER OF LIABILITY</a>
+			<h1>Waiver Of Liability</h1>
+			<a href="./Waiver_Of_Liability.pdf">Download here</a>
 		</div>
 	</div>
 
