Added sponsors section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
 		<p>Like someone’s Global Village Ramp Walk? Let them know. Want a more realistic simulation of global policy making and diplomacy? Receive crisis updates at 3 in the morning.</p>
 	</div>
 
+	<div class="sponsors">
+		<div class="sponsors-holder">
+			<h1>Our Sponsors</h1>
+			<ul>
+				<li><img src="./assets/sponsor1.png"></li>
+				<li><img src="./assets/sponsor2.png"></li>
+				<li><img src="./assets/sponsor3.png"></li>
+				<li><img src="./assets/sponsor4.png"></li>
+				<li><img src="./assets/sponsor5.png"></li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="waiver">
 		<div class="waiver-holder">
 			<h1>Waiver Of Liability</h1>
