--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
 
 	</div>
 
+	<div class="socials">
+		<div class="socials-holder">
+			<div class="details">
+				<h2>LIVE AT MUNIC TEN</h2>
+				<h1>ASRAR</h1>
+				<h1>ABDULLAH QURESHI</h1>
+			</div>
+		</div>
+	</div>
+
 	<div class="app">
 		<div class="phone-holder">
 			<img src="assets/buttons-strip.png" class="buttons-strip" id="buttons-strip">
