Added study guides

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</nav>
 		<h1 id="detailHeading"></h1>
 		<p id="detailPara"></p>
-		<p class="note">* Study guides will be available soon.</p>
+		<p class="note">* Study guides not available for Crisis Committee.</p>
 	</div>
 
 
@@ -56,18 +56,18 @@
 	</div>
 
 	<div class="committees">
-		<h1>Committees</h1>
+		<h1>Study Guides</h1>
 
 		<div class="clist">
 			
-			<a href="javascript:void(0);" onclick="showdetail('UNSC')"><li>UNSC</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('DISEC')"><li>DISEC</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('UNDP')"><li>UNDP</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('UNW')"><li>UNW</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('PNA')"><li>PNA</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('ICC')"><li>ICC</li></a>
+			<a href="./documents/UNSC_sg.pdf"><li>UNSC</li></a>
+			<a href="./documents/DISEC_sg.pdf"><li>DISEC</li></a>
+			<a href="./documents/UNDP_sg.pdf"><li>UNDP</li></a>
+			<a href="./documents/UNW_sg.pdf"><li>UNW</li></a>
+			<a href="./documents/PNA_sg.pdf"><li>PNA</li></a>
+			<a href="./documents/ICC_sg.pdf"><li>ICC</li></a>
 			<a href="javascript:void(0);" onclick="showdetail('ICAC')"><li>ICAC</li></a>
-			<a href="javascript:void(0);" onclick="showdetail('SOCHUM')"><li>SOCHUM</li></a>
+			<a href="./documents/SOCHUM_sg.pdf"><li>SOCHUM</li></a>
 
 		</div>
 
@@ -101,6 +101,10 @@
 				<li><img src="./assets/sponsor3.png"></li>
 				<li><img src="./assets/sponsor4.png"></li>
 				<li><img src="./assets/sponsor5.png"></li>
+				<li><img src="./assets/sponsor6.png"></li>
+				<li><img src="./assets/sponsor9.png"></li>
+				<li><img src="./assets/sponsor7.png"></li>
+				<li><img src="./assets/sponsor8.png"></li>
 			</ul>
 		</div>
 	</div>
